Restructured a lot of the paper, added use cases, will reference later

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -155,3 +155,10 @@ Future Wireless Networks",
     title     = "Electromagnetic Fields and Public Health",
     url       = "http://www.who.int/peh-emf/publications/facts/fs304/en/",
 }
+
+@misc{emfproj,
+% World Health Organisation International EMF Project
+    author    = "World Health Organisation",
+    title     = "International EMF Project",
+    url       = "http://www.who.int/peh-emf/project/EMF_Project/en/index2.html",
+}
