--- a/main.tex
+++ b/main.tex
@@ -29,14 +29,14 @@ Since the momentous event of the first mobile phone call over a cellular network
 In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation \textit{(5G)} of standards, and the possible applications of 5G.
 
 \subsection{A Brief History}
-In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed around the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. 
+In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed in the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. 
 
-As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation \textit{(3G)} of standards began development. The first commercial 3G networks were deployed across the world between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and everyday use of the internet continued to grow, it became evident that 3G was no longer enough.
+As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation \textit{(3G)} of standards began development. The first commercial 3G networks were deployed between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and use of the internet continued to grow, it became evident that 3G was no longer enough.
 
 \subsection{Fourth Generation and Current Limitations} \label{subsec:4g}
-As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, the creation of a fourth generation \textit{(4G)} of standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
+As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, 4G standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
 
-According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100Mbps (\textit{megabits-per-second}). While these speeds on paper are attractive, the actual speed a user may experience may be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses this small band in the spectrum. Estimates of total number of connected devices (including landlines, mobile phones, televisions and kettles to name a few) are currently at 18 billion \cite{ericssondev}, with this number increasing rapidly. This growing number implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
+According to Gartner \cite{gartner4g}, 4G provides users with peak speeds of 100Mbps (\textit{megabits-per-second}). While these speeds are attractive on paper, the actual speed a user may experience may be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses a small band in the spectrum. Estimates of total number of connected devices (such as landlines, mobile phones, televisions and kettles) are currently at 18 billion \cite{ericssondev}, with this number increasing rapidly. This implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
 
 \section{Fifth Generation}
 While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies. 5G will bring more efficient communication methods, thus allowing for faster movement of data coupled with increased reliability.
@@ -46,46 +46,48 @@ Presently there is no fixed definition for 5G, and the standards for 5G are cont
 
 \textbf{1) Massive Connectivity}. The \textit{Internet of Things} era is defined as the point in time where the number physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
 
-\textbf{2) Capacity Enhancement}. As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 \textit{Ericsson} predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
+\textbf{2) Capacity Enhancement}. As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
 
-\textbf{3) Ultra High Reliability and Low Latency}. Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices, regardless of how infrequent it may be. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant communication and data transfer is highly desired, if not necessary.
+\textbf{3) Ultra High Reliability and Low Latency}. Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant data transfer is highly desired, if not necessary.
 
 \section{Proposed Technologies}
 
-With three fundamental motivations behind 5G in mind, we must then contemplate the technologies required to achieve such goals. Like 5G standards, the technologies for 5G networks have also not been completely decided on. However, some popular promising technologies have emerged and include; Millimetre waves, small cells, massive MIMO (Multiple In Multiple Out), Beamforming and Full Duplex.
+With three fundamental motivations behind 5G in mind, we must then contemplate the technologies required to achieve such goals. Like its standards, 5G technologies have also not been completely decided on. However, some promising technologies have emerged and include; Millimetre waves, small cells, Massive MIMO (Multiple In Multiple Out), Beamforming and Spatial Multiplexing.
 
 \subsection{Millimetre Waves}
-As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the most pressing issues 5G needs to solve is an insufficient capacity in our networks for our current forecasts concerning device numbers. Current radio wave-based networks are utilising frequencies under 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to capacity problems is to simply utilise more of the frequency spectrum. Unfortunately, this is much more complicated than plainly allowing waves to travel over a wider variety of frequencies. 
+As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the most pressing issues 5G needs to solve is an insufficient capacity in our networks for current forecasts concerning device numbers. Today's radio wave-based networks utilise frequencies under 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to capacity problems is to use more of the frequency spectrum. Unfortunately, this is much more complicated than simply allowing waves to travel over a wider variety of frequencies. 
 
-Through the use of millimetre waves (\textit{mmWaves}), broadcast between 30 and 300GHz, a wide area of the spectrum previously unused for communications would be made available. According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard \textit{802.11ad} has already been developed to operate in this band. Fortunately, there is still up to 16GHz of available space in the remaining suggested bands. 
+Through the use of millimetre waves (\textit{mmWaves}), broadcast between 30 and 300GHz, a wide area of the spectrum previously unused for communications would be made available. Millimetre waves are an attractive technology from the perspective of transfer speed, and also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission.
 
-These suggested bands would not only improve network capacity, but would also allow for transfer of data at astonishing rates compared to those of today - up to 10Gpbs (\textit{gigabits-per-second}, equivalent to 1.25 gigabytes), with latencies of less than 1 millisecond \cite{mmwave}. Millimetre waves are an attractive technology not only from the perspective of transfer speed, but also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission. 
+According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard \textit{802.11ad} has already been developed for this band. Fortunately, there is still up to 16GHz free in the remaining suggested bands. 
+
+These suggested bands would improve network capacity, but also allow for transfer of data at astonishing rates compared to those of today - up to 10Gpbs (\textit{gigabits-per-second}, equivalent to 1.25 gigabytes), with latencies of less than 1 millisecond \cite{mmwave}. 
 
 \subsection{Small Cells}\label{subsec:smallcells}
 
-While millimetre waves sound promising with respect to both capacity and speed, they are regrettably not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signal can also be lost by way of blockage by natural and man-made objects such as trees and buildings, meaning they have previously been dismissed with regard to mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
+While millimetre waves sound promising with respect to both capacity and speed, they are not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signal can also be lost behind natural and man-made objects such as trees and buildings, meaning they have previously been dismissed for mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
 
-By incorporating stations known as small cells - much smaller and more portable than traditional base stations - we could bypass the issue of signals being lost through obstacles. In one case, when small cells were placed at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly 0.3 decibels per kilometre, while waves broadcast in 28 and 38GHz bands showed weakening between 0.6 and 0.8 dB per kilometre \cite{mmwave}. The same small cells tested in more severe conditions, such as particularly heavy rainfall, showed that the weakening of wave strength was still only between 3 and 6 decibels per kilometre. 
+By incorporating stations known as small cells - much smaller and more portable than traditional base stations - we could bypass the issue of signals being lost behind obstacles. In one case, when small cells were placed at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly 0.3 decibels per kilometre, while waves broadcast in 28 and 38GHz bands showed weakening between 0.6 and 0.8 dB/km \cite{mmwave}. The same small cells tested in more severe conditions like particularly heavy rainfall, showed that the weakening of wave strength was still only between 3 and 6 dB/km. 
 
-While these results are promising for millimetre waves and small cells, indoor applications for 5G networks must also be accounted for. It is arguable that in reality the largest use of these new technologies won't happen outdoors, rather in indoor environments such as offices and schools, where signals will have to travel through walls. 
+While these results are promising for millimetre waves and small cells, it is arguable that the largest use of 5G networks will be in indoor environments such as offices and schools, where signals will have to travel through walls. 
 
-Researchers at New York University (NYU) Polytechnic School of Engineering conducted tests on millimetre wave and small cell technologies in a typical modern office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical office features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass doors, elevator doors. Initial tests carried out over distances ranging from 3.9 to 45.9 metres showed path loss exponents (PLE; \textit{a reduction in strength}) in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28 and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28 and 73GHz bands, respectively. Deng \textit{et al} improved on these results through the implementation of beamforming, to be discussed in greater detail in section \textit{\ref{subsec:beamspac}}.
+Researchers at New York University (NYU) Polytechnic School of Engineering conducted tests on millimetre wave and small cell technologies in a typical office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass and elevator doors. Initial tests over distances ranging from 3.9 to 45.9 metres showed path loss exponents (PLE; \textit{a reduction in strength}) in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28 and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28 and 73GHz bands. Deng \textit{et al} improved on these results through the implementation of beamforming, to be discussed in greater detail in section \textit{\ref{subsec:beamspac}}.
 
 \subsection{Massive MIMO: Multiple Input Multiple Output}
-The concept of MIMO or \textit{multiple input, multiple output} has existed for many years, and is now a routine component in 4G LTE base stations. These antennae, usually no more than 10 per station \cite{mimo}, handle all incoming and outgoing data. The relatively small number of antennae featured in our current networks is a large contributing factor to current bandwidth issues, considering the antennae have to deal with an increased number of users at peak times.
+The concept of MIMO or \textit{multiple input, multiple output} has existed for many years, and is now a routine component in 4G LTE base stations. These antennae, usually no more than 10 per station \cite{mimo}, handle all incoming and outgoing data. This relatively small number of antennae have to deal with an increased number of users at peak times, highlighting crowded bandwidth problems.
 
-Massive MIMO is simply traditional MIMO but on a much larger scale, specifically a larger number of antennae than number of active users at any particular time \cite{whatwill5gbe}. As 5G stations would be handling millimetre waves instead of larger radio waves, a Massive MIMO system would have a much smaller form factor (the ratio of quadratic average to the average of all points on the waveform). This smaller form factor means antennae could be made physically smaller, allowing for more antennae on a station and thus indicating the possibility for exponential increases in available bandwidth \cite{mimo}.
+Massive MIMO is simply traditional MIMO but on a much larger scale, specifically more antennae than active users at any particular time \cite{whatwill5gbe}. As 5G stations would be handling millimetre waves instead of larger radio waves, a Massive MIMO system would have a much smaller form factor (the ratio of quadratic average to the average of all points on the waveform). This smaller form factor means antennae could be made physically smaller, allowing for more antennae on a station and thus the possibility for exponential increases in bandwidth \cite{mimo}.
 
-As Andrews \textit{et al} explains in \cite{whatwill5gbe}, the idea that number of antennae per station would be larger than the number of active users implies antenna numbers in the hundreds in each station. This suggestion brings a new implication with regards to signal interference from multiple antennae. One possible solution to this complication is the implementation of beamforming and spatial multiplexing.
+As Andrews \textit{et al} explains in \cite{whatwill5gbe}, the idea that number of antennae per station would be larger than the number of active users implies antenna numbers in the hundreds in each station. This suggestion brings a new implication in the form of signal interference. One possible solution to this is to implement beamforming and spatial multiplexing.
 
 \subsection{Beamforming and Spatial Multiplexing}\label{subsec:beamspac}
-Our current stations operate on the method of sending signals in multiple directions, rather than on a direct path to the target destination. The incorporation of beamforming and/or spatial multiplexing would not only reduce the likelihood of interference, but would also be much more efficient than current omnidirectional signals.
+Our current stations send signals in multiple directions, rather than on a direct path to the target destination. The incorporation of beamforming and/or spatial multiplexing would not only reduce the likelihood of interference, but would also be much more efficient than current omnidirectional signals.
 
-Spatial multiplexing involves splitting outgoing data into separate packets to be transferred simultaneously, over the same frequency, with the target antenna reassembling the packets upon receipt \cite{beam_sm}. Spatial multiplexing also allows for these packets of data to use walls and other obstacles almost like reflectors to bounce off. This technique would lead to a more efficient data transfer system, one better capable of handling increasing amounts of traffic on the network.
+Spatial multiplexing involves splitting outgoing data into packets to be transferred simultaneously, over the same frequency, with the target antenna reassembling the packets upon receipt \cite{beam_sm}. Spatial multiplexing also allows for packets to use walls and other obstacles almost like reflectors to bounce off. This technique would lead to a more efficient data transfer system, one better capable of handling increasing amounts of traffic on the network.
 
-To further improve data transfer methods, the implementation of beamforming would allow antennae to focus data in a directed way, almost like a beam. As discussed in section \textit{\ref{subsec:smallcells}}, researchers at NYU used beamforming to improve tests on indoor use of millimetre waves and small cells. Directional path loss exponents, initially reading 11.6 and 15.6 decibels for 28 and 73GHz bands respectively, were with beamforming reduced to 10.8 and 11.8 decibels, respectively, showing great improvement particularly in 73GHz bands.
+To further improve data transfer methods, beamforming would allow antennae to focus data in a directed way, almost like a beam. As discussed in section \textit{\ref{subsec:smallcells}}, researchers at NYU used beamforming to improve tests on indoor use of millimetre waves and small cells. Directional path loss exponents, initially reading 11.6 and 15.6 decibels for 28 and 73GHz bands respectively, were with beamforming reduced to 10.8 and 11.8 decibels, showing great improvement particularly in the 73GHz band.
 
-As Sun \textit{et al} outlines in \cite{beam_sm}, beamforming coupled with spatial multiplexing is highly appealing considering antennae could be steered in any direction and could bounce data off buildings, leading to very little loss of signal and reduced interference.
+As Sun \textit{et al} outlines in \cite{beam_sm}, these two concepts are highly appealing considering antennae could be steered in any direction and could bounce data off buildings, leading to very little loss of signal and reduced interference.
 \bigskip
 
 These four technologies are not the sole answers to problems encountered with 4G networks, nor are they the only options being explored. While the key technologies for 5G have yet to be decided on, general popularity and ongoing research suggest the aforementioned concepts are promising.
@@ -94,21 +96,28 @@ These four technologies are not the sole answers to problems encountered with 4G
 Having pondered the issues of current 4G networks and possible solutions using new technologies for 5G networks, the next natural step is to look at the possible future of 5G. One must weigh up the obvious and hidden problems facing 5G, as well as its likely use cases.
 
 \subsection{Problems Facing 5G}
-Complications and questions arise with each major development in any area of technology. Issues at the forefront of disruptions to 5G development include investment, health concerns, cost, and actually building the required infrastructure.
+Complications and questions arise with each major development in any area of technology. Some of the issues at the forefront of disruptions to 5G development include health concerns and building the required infrastructure.
 
-\subsubsection{Investment}It is human nature to want immediate reward for investing in anything, be it stocks or new technologies. 5G development and deployment is an ongoing process, with networks not expected to be implemented on a large scale until after 2020. A recent Gartner Research Circle survey found that three-quarters of participants would be willing to pay more for a 5G service than for 4G \cite{gart5g}, however one can imagine the results would have been significantly less enthusiastic had the question of willingness to invest been proposed.
+\subsubsection{Health}As any technology advances and incorporates new ideas, concerns regarding various health risks also develop. Micro-waves, broadcast in the same spectrum range as millimetre waves, have long been the subject of public suspicions. The World Health Organisation concluded in \cite{health} that, on the basis of scientific research, the only affect radio waves (0-6GHz) have on the human body is a minor increase in body temperature from exposure at very high intensities. While existing research suggests millimetre waves will not affect the body significantly more, the WHO's \textit{International EMF Project} \cite{emfproj} aims to continuously evaluate any risks related to waves broadcast on frequencies up to 300GHz.
 
-\subsubsection{Health}As any technology advances and incorporates new ideas, concerns regarding various health risks also develop. Micro-waves, broadcast in the same spectrum range as millimetre waves, have long been the subject of public suspicions. The World Health Organisation concluded in \cite{health} that, on the basis of scientific research, the only affect radio waves (0-6GHz) have on the human body is a minor increase in body temperature from exposure at very high intensities. While existing research suggests millimetre waves will not affect the body significantly more, the WHO's \textit{International EMF Project} aims to continuously evaluate any risks related to waves broadcast frequencies up to 300GHz.
-
-\subsubsection{Infrastructure}While 5G technologies will continue to require extensive funding for research and development, the cost of actually implementing the necessary infrastructure, in both rural and urban areas, could be colossal. Of course the requirement of large numbers of small cells entails a large initial cost, but the ongoing cost of maintenance must also be considered.
-
-There is also a trade off to be acknowledged in the case of rural areas - (will user numbers be worth implementing all the technology?)
-
+\subsubsection{Infrastructure}While 5G technologies will continue to require extensive funding for research and development, the cost of actually implementing the necessary infrastructure, in both rural and urban areas, could be colossal. Of course the requirement of large numbers of small cells entails a large initial cost, but the ongoing cost of maintenance must also be considered. There is also a trade off to be acknowledged in the case of sparsely populated or rural areas - will user uptake be substantial enough to warrant the cost and effort involved in providing access to 5G in these areas? 
 
 \subsection{Possible Use Cases}
+There are, as stated in the previous section, considerable obstacles for 5G to overcome. However one must also recognise the likely positive events introducing 5G networks on a global scale would lead to.
+
 \subsubsection{In Personal Life}
-Gaming, streaming, IoT / smart homes, always connected.
+The Internet of Things has been gaining strength and popularity with each passing year. Earlier this year, Ericsson predicted the number of IoT devices to rise to over 17 billion by 2022 \cite{ericssondev}. The capacity, efficiency and speed core to 5G networks would not only allow IoT devices to become more common in society, but also to expand in both variety and numbers.
+
+The gaming industry relies increasingly on fast data transfer speeds, particularly in online multiplayer games. With 5G technologies users could expect seamless play, and even download game updates tens of gigabytes in size in seconds.
+
+Considering 5G's advantages over 4G, it is undeniable that personal user experience on many levels would be greatly improved. However, it is important to recognise the wider benefits of 5G networks.
+
 \subsubsection{The Bigger Picture}
+On a societal and global level, 5G technologies would enable substantial advancements in many sectors,
+
+In education, one obvious instant advantage of 5G is the reduction of loading times for multimedia such as educational videos or live streamed classes. Additionally, 5G speeds could see new, more immersive learning techniques such as augmented and virtual reality environments becoming a common feature in education.
+
+
 Education, business / agriculture / monitoring, transport (autonomous), medical.
 
 
