Finished use cases

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -162,3 +162,11 @@ Future Wireless Networks",
     title     = "International EMF Project",
     url       = "http://www.who.int/peh-emf/project/EMF_Project/en/index2.html",
 }
+
+@misc{wp5g,
+% Ericsson White Paper
+    author = "Ericsson",
+    title = "5G Systems",
+    year = "2017",
+    url = "https://www.ericsson.com/assets/local/publications/white-papers/wp-5g-systems.pdf"
+}
