--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 This will be the abstract - short passage, intro, basic ideas, what review will be about etc. Filler text. Five lines.
 \end{abstract}
 \begin{IEEEkeywords}
-5G, telecommunications, networks, (will amend when review finished).
+5G, telecommunications, mobile networks, .
 \end{IEEEkeywords}
 
 \section{Introduction}
@@ -110,16 +110,14 @@ The Internet of Things has been gaining strength and popularity with each passin
 
 The gaming industry relies increasingly on fast data transfer speeds, particularly in online multiplayer games. With 5G technologies users could expect seamless play, and even download game updates tens of gigabytes in size in seconds.
 
-Considering 5G's advantages over 4G, it is undeniable that personal user experience on many levels would be greatly improved. However, it is important to recognise the wider benefits of 5G networks.
-
 \subsubsection{The Bigger Picture}
-On a societal and global level, 5G technologies would enable substantial advancements in many sectors,
+Considering 5G's advantages over 4G, it is undeniable that personal user experience on many levels would be greatly improved. However, it is important to recognise the benefits of 5G networks on a societal and global level.
 
-In education, one obvious instant advantage of 5G is the reduction of loading times for multimedia such as educational videos or live streamed classes. Additionally, 5G speeds could see new, more immersive learning techniques such as augmented and virtual reality environments becoming a common feature in education.
+In education, one obvious advantage of 5G is the reduction of loading times for multimedia such as educational videos or live streamed classes. Additionally, 5G speeds could see new, more immersive learning techniques such as augmented and virtual reality environments becoming a common feature in education.
 
+Remote surgery or examination in medicine would reap the benefits of 5G, seeing surgeons provided with almost perfectly accurate movement and touch feedback while operating remotely. \cite{wp5g} Similarly, heavy machinery in the construction and forestry industries could be controlled remotely, significantly reducing risk to human lives.
 
-Education, business / agriculture / monitoring, transport (autonomous), medical.
-
+There are endless possible use cases for 5G systems besides these examples, such as autonomous transport, smart cities, and emergency service communications \cite{wp5g}. Only large scale deployment of 5G networks will reveal all possible applications.
 
 \section{Conclusion}
 
